--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Bible. John -- Criticism, interpretation, etc.'
 - !lcc 'BS'
+- GITenberg
 title: Quiet Talks on John's Gospel
 url: http://www.gutenberg.org/ebooks/15185
